tests/ui/never_type/eq-never-types.stderr
note: no errors encountered even though delayed bugs were created

note: those delayed bugs will now be shown as internal compiler errors

error: internal compiler error: broken MIR in DefId(ice) (Terminator { source_info: SourceInfo { span: $DIR/eq-never-types.rs:19:5: 19:11 (#0), scope: scope[0] }, kind: _3 = <! as PartialEq>::eq(move _4, move _5) -> [return: bb1, unwind: bb2] }): bad arg #0 (&'?4 ! <- !): NoSolution
  --> $DIR/eq-never-types.rs:19:10
   |
LL |     a == a;
   |          ^
   |

  --> $DIR/eq-never-types.rs:19:10
   |
LL |     a == a;
   |          ^

note: using internal features is not supported and expected to cause internal compiler errors when used incorrectly

query stack during panic:
end of query stack
